# crewai-playground1

./: README.md
myenv/: pyvenv.cfg
novaquill/: README.md  pyproject.toml
novaquill/src/novaquill/: crew.py  main.py
