[project]
name = "novaquill"
version = "0.1.0"
description = "Novaquill using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
novaquill = "novaquill.main:run"
run_crew = "novaquill.main:run"
train = "novaquill.main:train"
replay = "novaquill.main:replay"
test = "novaquill.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
